--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
 jobs:
   job:
     machine:
-      image: ubuntu-2004:202101-01
+      image: cimg/base:stable
 
     steps:
       - checkout
