--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
 jobs:
   job:
     machine:
-      image: cimg/go:1.16
+      image: ubuntu-1604:202010-01 
 
     steps:
       - checkout
