--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
 jobs:
   job:
     machine:
-      image: ubuntu-1604:202010-01 
+      image: cimg/exilir:1.13.4
 
     steps:
       - checkout
