--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ workflows:
 jobs:
   job:
     machine:
-      image: cimg/exilir:1.13.4
+     resource_class: 2xlarge
+      image:ubuntu-2004:202101-01
 
     steps:
       - checkout
